--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "devDependencies": {
-    "shadow-cljs": "^2.8.37"
+    "shadow-cljs": "^2.8.83"
   },
   "dependencies": {
     "create-react-class": "^15.6.3",
+    "global": "^4.4.0",
     "javascript-terminal": "^1.0.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
